<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2021 Robert Bosch Manufacturing Solutions GmbH
  ~
  ~ See the AUTHORS file(s) distributed with this work for additional
  ~ information regarding authorship.
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  ~
  ~ SPDX-License-Identifier: MPL-2.0
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <parent>
      <groupId>org.eclipse.esmf</groupId>
      <artifactId>esmf-sdk-parent</artifactId>
      <version>DEV-SNAPSHOT</version>
      <relativePath>../../pom.xml</relativePath>
   </parent>

   <artifactId>esmf-aspect-model-importers</artifactId>
   <name>ESMF Aspect Model Importers</name>
   <packaging>jar</packaging>

   <dependencies>
      <dependency>
         <groupId>org.eclipse.esmf</groupId>
         <artifactId>esmf-aspect-meta-model-java</artifactId>
      </dependency>
      <dependency>
         <groupId>org.eclipse.esmf</groupId>
         <artifactId>esmf-aspect-model-jackson</artifactId>
      </dependency>
      <dependency>
         <groupId>io.soabase.record-builder</groupId>
         <artifactId>record-builder-processor</artifactId>
         <scope>provided</scope>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.eclipse.esmf</groupId>
         <artifactId>esmf-aspect-model-validator</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.eclipse.esmf</groupId>
         <artifactId>esmf-test-resources</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.eclipse.esmf</groupId>
         <artifactId>esmf-aspect-model-document-generators</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.eclipse.esmf</groupId>
         <artifactId>esmf-aspect-meta-model-java</artifactId>
         <version>${project.version}</version>
         <classifier>tests</classifier>
         <type>test-jar</type>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>com.bosch.bci.foundation</groupId>
         <artifactId>foundation-logback-spring</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>com.github.java-json-tools</groupId>
         <artifactId>json-schema-validator</artifactId>
         <scope>test</scope>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <annotationProcessorPaths>
                  <path>
                     <groupId>io.soabase.record-builder</groupId>
                     <artifactId>record-builder-processor</artifactId>
                     <version>${record-builder-version}</version>
                  </path>
               </annotationProcessorPaths>
               <source>21</source>
               <target>21</target>
               <compilerArgs>--enable-preview</compilerArgs>
            </configuration>
         </plugin>
      </plugins>
   </build>
</project>
